# SuperLesson

./: .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  convert.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
scripts/: 0_anotate_to_pdf.py  1_single_file_transcription.py  2_insert_tmarks.py  3_verify_tbreaks_with_mpv.py  4_replace_words.py  5_improve_transcription_gpt35.py  6_check_differences.py
src/: annotate.py  main.py  transcribe.py  transitions.py  utils.py
src/steps/: annotate.py  step.py  transcribe.py  transitions.py
src/storage/: __init__.py  lesson.py  slide.py  store.py
src/superlesson/: __main__.py  cli.py  collection.py
src/superlesson/steps/: __init__.py  annotate.py  enumerate.py  merge.py  step.py  transcribe.py  transitions.py
src/superlesson/storage/: __init__.py  lesson.py  slide.py  store.py  utils.py
superlesson/: __init__.py  cli.py  main.py
superlesson/steps/: __init__.py  annotate.py  step.py  transcribe.py  transitions.py
superlesson/storage/: lesson.py  slide.py  store.py  utils.py
tests/: cli_test.py  test_collection.py  test_storage.py  test_utils.py
tests/steps/: test_transcribe.py
