[tool.poetry]
name = "SuperLesson"
version = "0.2.0"
description = "CLI to transcribe lectures"
authors = [
    "Isabella Basso",
    "Felipe Kaneshiro",
    "Isaque Alves",
    "Ricardo Saraiva",
]
packages = [{ include = "superlesson" }]
readme = "README.md"
license = "MIT"
repository = "https://github.com/SuperLesson/SuperLesson"

[tool.poetry.scripts]
superlesson = "superlesson.cli:main"
transcribe = "superlesson.cli:transcribe_step"
merge = "superlesson.cli:merge_step"
replace = "superlesson.cli:replace_step"
improve = "superlesson.cli:improve_step"
enumerate = "superlesson.cli:enumerate_step"
annotate = "superlesson.cli:annotate_step"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.transcribe.dependencies]
faster-whisper = "^0.9.0"
boto3 = "^1.28"
replicate = "^0.20.0"
tqdm = "^4.66"

[tool.poetry.group.tmarks.dependencies]
pydub = "^0.25.1"

[tool.poetry.group.improve.dependencies]
python-dotenv = "^1.0"
openai = "^1.2"
tiktoken = "^0.5.1"

[tool.poetry.group.annotate.dependencies]
pypdf = { extras = ["crypto"], version = "^3.17" }
typst = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
hypothesis = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
